--- a/CC-Electron/src/renderer/styles/settings-section.css
+++ b/CC-Electron/src/renderer/styles/settings-section.css
@@ -78,11 +78,11 @@
     cursor: pointer;
 }
 
-.general-setting-field[name="capturesPath"], .general-setting-field[name="clipsPath"] {
+.general-setting-field[name="capturesDirectory"], .general-setting-field[name="clipsDirectory"] {
     width: var(--gstfield-alt-width);
 }
 
-.general-setting-field[name="capturesDisp"], .general-setting-field[name="speaker"], .general-setting-field[name="microphone"], .general-setting-field[name="webcam"] {
+.general-setting-field[name="capturesDisplay"], .general-setting-field[name="speaker"], .general-setting-field[name="microphone"], .general-setting-field[name="webcam"] {
     width: var(--gstfield-alt2-width);
 }
 
